# abenteuer_informatik

./: LICENSE  pyproject.toml  readme.md
abenteuer_informatik/: __init__.py
abenteuer_informatik/chapter_01_navigation/: __init__.py  dijkstra.py
abenteuer_informatik/chapter_02_sorting/: __init__.py  sorting.py
chapter_01_navigation/: dijkstra.py
tests/: test_dijkstra.py  test_sorting.py
tests/chapter_01_navigation/: test_dijkstra.py
